infra/k8s/worker-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrocore-reporting-service
  labels:
    app: agrocore-reporting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrocore-reporting
  template:
    metadata:
      labels:
        app: agrocore-reporting
    spec:
      containers:
      - name: reporting
        image: agrocore-reporting:latest
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: agrocore-weather-service
  labels:
    app: agrocore-weather
spec:
  replicas: 1
  selector:
    matchLabels:
      app: agrocore-weather
  template:
    metadata:
      labels:
        app: agrocore-weather
    spec:
      containers:
      - name: weather
        image: agrocore-weather:latest
